--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <h3 class="mb-0">Korean Copyright</h3>
                         <ol>
                             <li>
-                                <b>Minh-Trieu Tran</b>, Guee-Sang Lee. <br>“<em> Binarization of music score with complex background by deep convolutional neural networks.
+                                <b>Tran M-T</b>, Lee G-S. <br>“<em> Binarization of music score with complex background by deep convolutional neural networks.
                                   </em>”. Registration of copyright number 206371-0001063, Korea 2021. </a>
                             </li>
                         </ol>
@@ -191,11 +191,12 @@
                         <h3 class="mb-0">Articles in Peer-Reviewed Journals</h3>
                         <ol>
                             <li>
-                                <b>NH Ho</b>, HJ Yang, J Kim. <br>“<em>Multimodal multitask learning for predicting MCI to AD conversion using stacked polynomial attention network and adaptive exponential decay</em>”.
-                                In: Scientific Reports
-                                13 (2023), p. 11243. DOI: 10.1038/s41598-023-37500-7.
+                                <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblas-
+toma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
+                                In: IEEE Access
+                                11 (2023), p. 37437-37449. DOI: 10.1109/ACCESS.2023.3266771.
                                 <a
-                                    href="https://www.nature.com/articles/s41598-023-37500-7">Nature</a>
+                                    href="https://ieeexplore.ieee.org/document/10101792/">IEEE</a>
                             </li>
                             <li>
                                 TD Tran, <b>NH Ho</b>, S Pant, HJ Yang, SH Kim, G Lee. <br>“<em>Cross-modality learning by exploring modality interactions for emotion reasoning</em>”.
