--- a/index.html
+++ b/index.html
@@ -191,104 +191,21 @@
                         <h3 class="mb-0">Articles in Peer-Reviewed Journals</h3>
                         <ol>
                             <li>
-                                <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblas-
-toma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
+                                <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblastoma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
                                 In: IEEE Access
                                 11 (2023), p. 37437-37449. DOI: 10.1109/ACCESS.2023.3266771.
                                 <a
                                     href="https://ieeexplore.ieee.org/document/10101792/">IEEE</a>
                             </li>
-                            <li>
-                                TD Tran, <b>NH Ho</b>, S Pant, HJ Yang, SH Kim, G Lee. <br>“<em>Cross-modality learning by exploring modality interactions for emotion reasoning</em>”.
+
+                               <li>
+                                <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblastoma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
                                 In: IEEE Access
-                                11 (2023), p. 56634-56648. DOI: 10.1109/ACCESS.2023.3283597.
+                                11 (2023), p. 37437-37449. DOI: 10.1109/ACCESS.2023.3266771.
                                 <a
-                                    href="https://ieeexplore.ieee.org/abstract/document/10145792">IEEE</a>
+                                    href="https://ieeexplore.ieee.org/document/10101792/">IEEE</a>
                             </li>
-                            <li>
-                                <b>NH Ho</b>, HJ Yang, J Kim, DP Dao, HR Park, S Pant. <br>“<em>Predicting progression of Alzheimer's disease using forward-to-backward bi-directional network with integrative imputation</em>”.
-                                In: Neural Networks
-                                150 (2022), p. 422-439. DOI: 10.1016/j.neunet.2022.03.016.
-                                <a
-                                    href="https://www.sciencedirect.com/science/article/pii/S0893608022000946">Elsevier</a>
-                            </li>
-                            <li>
-                                <b>NH Ho</b>, HJ Yang, SH Kim, G Lee, SB Yoo. <br>“<em>Deep Graph Fusion based Multimodal Evoked Expressions from Large-Scale Videos</em>”.
-                                In: IEEE Access
-                                9 (2021). DOI: 10.1109/ACCESS.2021.3107548.
-                                <a
-                                    href="https://ieeexplore.ieee.org/document/9521910">IEEE</a>
-                            </li>
-                            <li>
-                                TD Tran, J Kim, <b>NH Ho</b>, HJ Yang, S Pant, SH Kim, G Lee. <br>“<em>Stress Analysis with Dimensions of Valence and Arousal in the Wild</em>”.
-                                In: Applied Sciences
-                                11.11 (2021), p. 5194. DOI: 10.3390/app11115194.
-                                <a
-                                    href="https://www.mdpi.com/2076-3417/11/11/5194">MDPI</a>
-                            </li>
-                            <li>
-                                DS Tran, <b>NH Ho</b>, HJ Yang, SH Kim, G Lee. <br>“<em>Real-time virtual mouse system using RGB-D images and fingertip detection</em>”.
-                                In: Multimedia Tools and Applications
-                                80 (2021), p. 10473-10490. DOI: 10.1007/s11042-020-10156-5.
-                                <a
-                                    href="https://link.springer.com/article/10.1007/s11042-020-10156-5">Springer</a>
-                            </li>
-                            <li>
-                                <b>NH Ho</b>, HJ Yang, SH Kim, G Lee. <br>“<em>Multimodal approach of speech emotion recognition using multi-level multi-head fusion attention-based recurrent neural network</em>”.
-                                In: IEEE Access
-                                8 (2020), p. 61672-61686. DOI: 10.1109/ACCESS.2020.2984368.
-                                <a
-                                    href="https://ieeexplore.ieee.org/abstract/document/9050806">IEEE</a>
-                            </li>
-                            <li>
-                                TLB Khanh, DP Dao, <b>NH Ho</b>, HJ Yang, ET Baek, G Lee, SH Kim, SB Yoo. <br>“<em>Enhancing U-Net with spatial-channel attention gate for abnormal tissue segmentation in medical imaging</em>”.
-                                In: Applied Sciences
-                                10.17 (2020), p. 5729. DOI: 10.3390/app10175729.
-                                <a
-                                    href="https://www.mdpi.com/2076-3417/10/17/5729">MDPI</a>
-                            </li>
-                            <li>
-                                DS Tran, <b>NH Ho</b>, HJ Yang, ET Baek, SH Kim, G Lee. <br>“<em>Real-time hand gesture spotting and recognition using RGB-D camera and 3D convolutional neural network</em>”.
-                                In: Applied Sciences
-                                10.2 (2020), p. 722. DOI: 10.3390/app10020722
-                                <a
-                                    href="https://www.mdpi.com/2076-3417/10/2/722">MDPI</a>
-                            </li>
-                            <li>
-                                <b>NH Ho</b>, HJ Yang, SH Kim, ST Jung, SD Joo. <br>“<em>Regenerative semi-supervised bidirectional W-network-based knee bone tumor classification on radiographs guided by three-region bone segmentation</em>”.
-                                In: IEEE Access
-                                7 (2019), p. 6825-6833. DOI: 110.1109/ACCESS.2019.2949125.
-                                <a
-                                    href="https://ieeexplore.ieee.org/abstract/document/8880590">IEEE</a>
-                            </li>
-                            <li>
-                                TD Vu, <b>NH Ho</b>, HJ Yang, J Kim, HC Song. <br>“<em>Non-white matter tissue extraction and deep convolutional neural network for Alzheimer’s disease detection</em>”.
-                                In: Soft Computing
-                                22 (2018), p. 61672-61686. DOI: 10.1007/s00500-018-3421-5.
-                                <a
-                                    href="https://link.springer.com/article/10.1007/s00500-018-3421-5">Springer</a>
-                            </li>
-                            <li>
-                                PH Truong, ND Nguyen, <b>NH Ho</b>, GM Jeong. <br>“<em>Nonparametric regression-based step-length estimation for arm-swing walking using a smartphone</em>”.
-                                In: IJCCC
-                                13.4 (2018), p. 566-573. DOI: 10.15837/ijccc.2018.4.3148.
-                                <a
-                                    href="http://univagora.ro/jour/index.php/ijccc/article/view/3148">Univagora</a>
-                            </li>
-                            <li>
-                                <b>NH Ho</b>, PH Truong, GM Jeong. <br>“<em>Step-detection and adaptive step-length estimation for pedestrian dead-reckoning at various walking speeds using a smartphone</em>”.
-                                In: Sensors
-                                16.9 (2016), p. 1423. DOI: 10.3390/s16091423.
-                                <a
-                                    href="https://www.mdpi.com/1424-8220/16/9/1423">MDPI</a>
-                            </li>
-                            <li>
-                                VK Ho, NK Doan, <b>NH Ho</b>. <br>“<em>Impact of channel estimation error on the performance of relay selection in cognitive radio networks</em>”.
-                                In: Wireless Personal Communications
-                                84 (2015), p. 2513–2536. DOI: 10.1007/s11277-015-2717-3.
-                                <a
-                                    href="https://link.springer.com/article/10.1007/s11277-015-2717-3">Springer</a>
-                            </li>
+                       
                         </ol>
                     </div>
                 </div>
