--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
-                        <h3 class="mb-0">Articles in Peer-Reviewed Journals</h3>
+                        <h3 class="mb-0">Journals</h3>
                         <ol>
                             <li>
                                 <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblastoma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
@@ -231,6 +231,21 @@
                                     href="https://doi.org/10.3390/app10217790">MDPI</a>
                               </li>
 
+                              <li>
+                               <b>Tran M-T</b> and Lee G-S. <br>“<em>Staff-line Removal for Music Score Images using U-net.</em>”.
+                                In:  KIISE Transactions on Computing Practices (KTCP)
+                                26 (2020), p. 26-31 DOI:10.5626/KTCP.2020.26.1.26.
+                                <a
+                                    href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE09289755&language=ko_KR&hasTopBanner=true">KIISE</a>
+                              </li>
+
+                               <li>
+                               <b>Tran M-T</b> and Lee G-S. <br>“<em>Super-resolution in music score images by instance normalization.</em>”.
+                                In:  Smart Media Journal
+                                8 (2019), p. 64-71 DOI:10.30693/SMJ.2019.8.4.64
+                                <a
+                                    href="https://scholar.kyobobook.co.kr/article/detail/4010027517302">Smart Media Journal</a>
+                              </li>
 
 
 
@@ -242,7 +257,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
-                        <h3 class="mb-0">International Conferences/Proceedings</h3>
+                        <h3 class="mb-0">International Conferences</h3>
                         <ol>
                             <li>
                                 <b>NH Ho</b>, HJ Yang, J Kim. <br>“<em>Prediction of Alzheimer's Disease Progression using Multiview Dense Residual Attention and Stack Polynomial Attention</em>”.
