--- a/index.html
+++ b/index.html
@@ -270,53 +270,27 @@ age.</em>”.
                             </li>
 
                                <li>
-                                <b>Tran M-T</b>, Yang H-J, Kim S-H, Oh I-J, Kang S-R, and Lee G-S. <br>“<em>Esophagus Segmentation in CT Images via Spatial Attention Network and STAPLE Algorithm.</em>”.
-                                In: Sensors
-                                21 (2021), p. 4556. DOI:10.3390/s21134556.
+                               Do T-B-T, Trinh D-L, <b>Tran M-T</b>, Lee G-S, Yang H-J, Kim S-H.<br>“<em>Deep Learning Based Ensemble Approach for 3D MRI Brain Tumor Segmentation.</em>”.
+                                In Proceeding of 7th International Workshop, BrainLes 2021, Held in Conjunction with MICCAI 2021. 
                                 <a
-                                    href="https://doi.org/10.3390/s21134556">MDPI</a>
+                                    href="https://doi.org/10.1007/978-3-031-09002-8_19">DOI: 978-3-031-09002-8_19</a>
                               </li>
 
                               <li>
-                                <b>Tran M-T</b>, Yang H-J, Kim S-H, and Lee G-S. <br>“<em>Multi-Task Learning for Medical Image Inpainting Based on Organ Boundary Awareness.</em>”.
-                                In: Applied Sciences
-                                11 (2021), p. 4247 DOI:10.3390/app11094247.
-                                <a
-                                    href="https://doi.org/10.3390/app11094247">MDPI</a>
+                                Dinh M-T, Dang Q-V, <b>Tran M-T</b>, Lee G-S.. <br>“<em>Robust Scene Text Detection Under Occlusion via Multi-scale Adaptive Deep Network.</em>”.
+                                In: Na, I., Irie, G. (eds) Frontiers of Computer Vision. IW-FCV 2023. Communications in Computer and Information Science, vol 1857. Springer, Singapore. <a
+                                    href="https://doi.org/10.1007/978-981-99-4914-4_10">DOI: 10.1007/978-981-99-4914-4_10</a>
                               </li>
 
                               <li>
-                                <b>Tran M-T</b>, Vo Q-N and Lee G-S. <br>“<em>Binarization of music score with complex background by deep convolutional neural networks.</em>”.
-                                In: Multimedia Tools & Applications
-                                80 (2021), p. 11031-11047 DOI:10.1007/s11042-020-10272-2.
+                                <b>Tran M-T</b> and Lee G-S. <br>“<em>Staff Line Removal for Music Score Images with Super Resolution Technique.</em>”.
+                               In Proceedings of the Korea Computer Congress, 2019. At: Jeju, South Korea. 
                                 <a
-                                    href="https://doi.org/10.1007/s11042-020-10272-2">Springer</a>
+                                    href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE08763347">DOI: 10.5626/KTCP.2020.26.1.26</a>
                               </li>
 
                           
-                              <li>
-                               Ngo D-K, <b>Tran M-T</b>, Yang H-J, Kim S-H, and Lee G-S. <br>“<em>Multi-Task Learning for Small Brain Tumor Segmentation from MRI.</em>”.
-                                In:  Applied Sciences
-                                10 (2020), p. 7790 DOI:10.3390/app10217790.
-                                <a
-                                    href="https://doi.org/10.3390/app10217790">MDPI</a>
-                              </li>
-
-                              <li>
-                               <b>Tran M-T</b> and Lee G-S. <br>“<em>Staff-line Removal for Music Score Images using U-net.</em>”.
-                                In:  KIISE Transactions on Computing Practices (KTCP)
-                                26 (2020), p. 26-31 DOI:10.5626/KTCP.2020.26.1.26.
-                                <a
-                                    href="https://www.dbpia.co.kr/journal/articleDetail?nodeId=NODE09289755&language=ko_KR&hasTopBanner=true">KIISE</a>
-                              </li>
-
-                               <li>
-                               <b>Tran M-T</b> and Lee G-S. <br>“<em>Super-resolution in music score images by instance normalization.</em>”.
-                                In:  Smart Media Journal
-                                8 (2019), p. 64-71 DOI:10.30693/SMJ.2019.8.4.64
-                                <a
-                                    href="https://scholar.kyobobook.co.kr/article/detail/4010027517302">Smart Media Journal</a>
-                              </li>
+                              
 
 
 
