--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
                 <div class="owl-carousel testimonials-carousel">
 
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-                        <img src="assets/img/testimonials/prof-shkim.png" class="testimonial-img" alt="">
+                        <img src="assets/img/testimonials/prof-lee.png" class="testimonial-img" alt="">
                         <h3>Guee-Sang Lee</h3>
                         <h4><b>Professor</b></h4>
                         <h4>Department of AI Convergence</h4>
@@ -786,7 +786,7 @@
                     </div>
                     
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
-                        <img src="assets/img/testimonials/prof-shkim.png" class="testimonial-img" alt="">
+                        <img src="assets/img/testimonials/thanhDUng.jpg" class="testimonial-img" alt="">
                         <h3>Nguyen Thanh Dung</h3>
                         <h4><b>Vice Director</b></h4>
                         <h4>Vietnam Aviation Academy</h4>
@@ -800,7 +800,7 @@
         </section><!-- End Testimonials Section -->
 
     
-     <!-- ======= Contact Section ======= -->
+<!--      ======= Contact Section ======= -->
         <section id="contact" class="contact section-bg">
             <div class="container">
 
@@ -873,8 +873,8 @@
                 <p>+1 5589 55488 55s</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-            </div>
+src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1630.568915477052!2d126.90811476909774!3d35.17811708776831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x35718d42165928eb%3A0x3cea2b4d3199e090!2z7KCE64Ko64yA7ZWZ6rWQIOyGjO2UhO2KuOybqOyWtOqzte2VmeqzvA!5e0!3m2!1sen!2skr!4v1619506275525!5m2!1sen!2skr"
+                                style="border:0; width: 100%; height: 290px;" allowfullscreen="" loading="lazy"></iframe>            </div>
 
           </div>
 
