--- a/index.html
+++ b/index.html
@@ -709,12 +709,12 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="">Classifying Diseases on Strawberry Leaves,</a></h4>
-            <p class="description">Disease leaf segmentation in agriculture is a computer vision task that automatically identifies and delineates diseased regions on plant leaves from images.</p>
+            <p class="description">Disease leaf segmentation in agriculture is a computer vision task that automatically identifies and delineates diseased regions on plant leaves from images</p>
           </div>
           
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Occluded Scene Text Detection using Deep Learning,</a></h4>
+            <h4 class="title"><a href="">Occluded Scene Text Detection using Deep Learning</a></h4>
             <p class="description">Occluded scene text detection is crucial for scene text reading systems and is an active research area due to its usefulness in real world applications. However, key challenges remain. The domain
 shift from clean to occluded text is a major issue. Most data is normalized text, but models trained on clean data struggle when tested on occluded text since the features are quite different. Recent methods attempt adaptation but primarily use synthetic data, which
 does not reflect real occluded text well. We propose an efficient occluded text detector trained only on clean data. By concatenating multi-level features, our model learns textual representations suitable for occluded detection without domain-specific data. Experimental results show that our method achieves good results
@@ -851,14 +851,14 @@ for occluded text detection..</p>
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>Tran Minh Trieu</span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a tranminhtrieu</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
