--- a/index.html
+++ b/index.html
@@ -524,6 +524,7 @@
                                 “Foreign Object Debris (FOD) Detection for Aviation via Image Processing Technology”.
                                 2018
                             </p>
+                          <a href="https://vaa.edu.vn/de-tai-nghien-cuu-khoa-hoc/">Link</a>
                         </div>
                         <div class="resume-item">
                             <h4>Bachelor in Electronics and Telecommunications Engineering</h4>
@@ -568,6 +569,7 @@
                             <h5>2017-2021</h5>
                             <ul>
                                 <li>Ministry-level Research Topic on Foreign Object Debris Detection in Runway.</li>
+                            <a href="https://www.vietnam.vn/en/nha-khoa-hoc-viet-day-may-phat-hien-vat-the-la-trong-san-bay/">Link</a>
                             </ul>
                         </div>
                        
