--- a/index.html
+++ b/index.html
@@ -113,18 +113,9 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 August 1994</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>tmtvaa.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+8210 2175 2182</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>77 Yongbong-ro, Yongbong-dong, Bukgu, Gwangju, South Korea</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gwangju, South Korea</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor of Philosophy in Computer Science</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>tmtvaa@gmail.com</span></li>
-                 
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>tmtvaa@gmail.com</span></li>                 
                 </ul>
               </div>
             </div>
