--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Chonnam National University</strong> <span></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gwangju, South Korea</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor of Philosophy in Computer Science</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>tmtvaa@gmail.com</span></li>                 
@@ -385,10 +386,10 @@
                     
                       <div class="progress">
                           <span class="skill"><i class="fab fa-python fa-2x mr-2"></i>Python<i
-                                  class="val">80%</i></span>
+<!--                                   class="val">80%</i></span>
                           <div class="progress-bar-wrap">
                               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                                  aria-valuemax="100"></div>
+                                  aria-valuemax="100"></div> -->
                           </div>
                       </div>
 
