--- a/index.html
+++ b/index.html
@@ -385,11 +385,11 @@
                       <p class="mb-2">Programming Languages</p>
                     
                       <div class="progress">
-                          <span class="skill"><i class="fab fa-python fa-2x mr-2"></i>Python<i
-<!--                                   class="val">80%</i></span>
+                          <span class="skill"><i class="fab fa-python fa-2x mr-2"></i>Python<
+                          class="val">80%</i></span>
                           <div class="progress-bar-wrap">
                               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                                  aria-valuemax="100"></div> -->
+                                  aria-valuemax="100"></div> 
                           </div>
                       </div>
 
@@ -471,7 +471,7 @@
                       <div class="progress">
                           <span class="skill">Korean<i class="val">Basic</i></span>
                           <div class="progress-bar-wrap">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0"
+                              <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0"
                                   aria-valuemax="100"></div>
                           </div>
                       </div>
