--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="count-box">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="61" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Citaions</strong></p>
+              <p><strong>Citations</strong></p>
             </div>
           </div>
 
