--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                       <p class="mb-2">Programming Languages</p>
                     
                       <div class="progress">
-                          <span class="skill"><i class="fab fa-python fa-2x mr-2"></i>Python<
+                          <span class="skill"><i class="fab fa-python fa-2x mr-2"></i>Python<i
                           class="val">80%</i></span>
                           <div class="progress-bar-wrap">
                               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
