--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@ for occluded text detection..</p>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+<a href="https://clustrmaps.com/site/1bybn" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oWuCYAD5HUWZHz1N-titvTqktTjWGBNlETi8NFTyj4A&cl=ffffff"></a>
 </body>
 
 </html>
