--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@ for occluded text detection..</p>
             </div>
         </section><!-- End Testimonials Section -->
 
- <a href="https://clustrmaps.com/site/1bybn" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oWuCYAD5HUWZHz1N-titvTqktTjWGBNlETi8NFTyj4A&cl=ffffff"></a>
+ <a href="https://clustrmaps.com/site/1bybn" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oWuCYAD5HUWZHz1N-titvTqktTjWGBNlETi8NFTyj4A&cl=ffffff&w=150&t=n&d=qRfGtCyumKD_k_bVX26frT-dTv89zON7DtvL8oZ95SU"></a>
 
 
    
