--- a/index.html
+++ b/index.html
@@ -789,15 +789,17 @@ for occluded text detection..</p>
                         <h4><b>Vice Director</b></h4>
                         <h4>Vietnam Aviation Academy</h4>
                         <h4><a href=mailto:“dungnt@vaa.edu.vn">dungnt@vaa.edu.vn</a></h4>
+
+                      
                     </div>
-                    
+                    <a href="https://clustrmaps.com/site/1bybn" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oWuCYAD5HUWZHz1N-titvTqktTjWGBNlETi8NFTyj4A&cl=ffffff&w=a"></a>
 
                 </div>
 
             </div>
         </section><!-- End Testimonials Section -->
 
- <a href="https://clustrmaps.com/site/1bybn" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oWuCYAD5HUWZHz1N-titvTqktTjWGBNlETi8NFTyj4A&cl=ffffff"></a>
+ 
 
 
    
