--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@ for occluded text detection..</p>
 
                       
                     </div>
-                    <a href="https://clustrmaps.com/site/1bybn" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oWuCYAD5HUWZHz1N-titvTqktTjWGBNlETi8NFTyj4A&cl=ffffff&w=a"></a>
+                    <a href="https://clustrmaps.com/site/1bybn" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oWuCYAD5HUWZHz1N-titvTqktTjWGBNlETi8NFTyj4A&cl=ffffff&w=50"></a>
 
                 </div>
 
