--- a/index.html
+++ b/index.html
@@ -788,11 +788,13 @@ for occluded text detection..</p>
                         <h3>Nguyen Thanh Dung</h3>
                         <h4><b>Vice Director</b></h4>
                         <h4>Vietnam Aviation Academy</h4>
-                        <h4><a href=mailto:“dungnt@vaa.edu.vn">dungnt@vaa.edu.vn</a></h4>
-
-                      
+                        <h4><a href=mailto:“dungnt@vaa.edu.vn">dungnt@vaa.edu.vn</a></h4>                      
                     </div>
+
+                    <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                     <a href="https://clustrmaps.com/site/1bybn" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oWuCYAD5HUWZHz1N-titvTqktTjWGBNlETi8NFTyj4A&cl=ffffff&w=600"></a>
+                    </div>
+                    
 
                 </div>
 
