--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <ol>
                             <li>
                                 <b>Tran M-T</b>, Lee G-S. <br>“<em> Binarization of music score with complex background by deep convolutional neural networks.
-                                  </em>”. Registration of copyright number 206371-0001063, Korea 2021. </a>
+                                  </em>”. Registration of copyright number 206371-0001063, Korea 2021.  <a href="https://doi.org/10.3390/s21134556">MDPI</a></a>
                             </li>
                         </ol>
                     </div>
