--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <h3 class="mb-0">PhD Thesis</h3>
                         <ol>
                             <li>
-                                Tran Minh Trieu. <br>“Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”. Presented 2 June 2022.
+                                Tran Minh Trieu. <br>“Overall Survival Prediction in Glioblastoma Patients via Local Context of Brain Tumor MRI”. Presented 2 June 2022. <a href="https://docs.google.com/presentation/d/1e3Ev_TEtM8t-wVGtipxTJQg8j2Y_jg2D/edit?usp=sharing&ouid=101958928903356864861&rtpof=true&sd=true">Link</a></a>
                             </li>
                         </ol>
                     </div>
@@ -174,7 +174,7 @@
                         <ol>
                             <li>
                                 <b>Tran M-T</b>, Lee G-S. <br>“<em> Binarization of music score with complex background by deep convolutional neural networks.
-                                  </em>”. Registration of copyright number 206371-0001063, Korea 2021.  <a href="https://doi.org/10.3390/s21134556">MDPI</a></a>
+                                  </em>”. Registration of copyright number 206371-0001063, Korea 2021.  <a href="https://drive.google.com/file/d/1-vzJZaAsbfnSYZhC75KQquWfidqkpWvA/view?usp=sharing">Link</a></a>
                             </li>
                         </ol>
                     </div>
