--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
           
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Classifying Diseases on Strawberry Leaves,</a></h4>
+            <h4 class="title"><a href="">Classifying Diseases on Strawberry Leaves</a></h4>
             <p class="description">Disease leaf segmentation in agriculture is a computer vision task that automatically identifies and delineates diseased regions on plant leaves from images</p>
           </div>
           
