--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Photos</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Projects</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>References</span></a></li>
+          <li><a href="#references" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>References</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -791,6 +791,14 @@ for occluded text detection..</p>
                         <h4><a href=mailto:“dungnt@vaa.edu.vn">dungnt@vaa.edu.vn</a></h4>                      
                     </div>
 
+                  <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
+                        <img src="assets/img/testimonials/thayDuy.jpg" class="testimonial-img" alt="">
+                        <h3>Trinh Hoang Duy</h3>
+                        <h4><b>Lecturer</b></h4>
+                        <h4>Vietnam Aviation Academy</h4>
+                        <h4><a href=mailto:“duytrinh12@gmail.com">duytrinh12@gmail.com</a></h4>                      
+                    </div>
+                  
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                     <a href="https://clustrmaps.com/site/1bybn" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=oWuCYAD5HUWZHz1N-titvTqktTjWGBNlETi8NFTyj4A&cl=ffffff"></a>
                     </div>
