--- a/index.html
+++ b/index.html
@@ -561,6 +561,7 @@
                             <h5>2017-2021</h5>
                             <ul>
                                 <li>Ministry-level Research Topic on Foreign Object Debris Detection in Runway.</li>
+                            <a href="https://drive.google.com/file/d/1upypTvVYnBldFunE2BO2AwpMrVT3s5CD/view?usp=sharing">Certificate</a>
                             <a href="https://www.vietnam.vn/en/nha-khoa-hoc-viet-day-may-phat-hien-vat-the-la-trong-san-bay/">Link</a>
                             </ul>
                         </div>
