--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, I am a computer vision researcher working in Postdoctoral Position at Chonnam National
-            University, South Korea. I obtained a Ph.D. degree in Computer Science from Chonnam National Univesity (South 
+          <p>Hi, I am a computer vision researcher working in Postdoctoral Position at Gran Sasso Science Institute (GSSI), L'Aquila city, Italy. I obtained a Ph.D. degree in Computer Science from Chonnam National Univesity (South 
             Korea) in 2022, advised by Prof. Guee-Sang Lee. I achieved Master degree in Electronics
             Engineering under the supervision of Dr. Nguyen Thanh Dung and Master of Engineering
             Trinh Hoang Duy at the University of Technology and Education (Vietnam) in
@@ -113,10 +112,10 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Chonnam National University</strong> <span></span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Gwangju, South Korea</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Gran Sasso Science Institute</strong> <span></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>L'Aquila, Italy</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor of Philosophy in Computer Science</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>tmtvaa@gmail.com</span></li>                 
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>minhtrieu.tran@gssi.it</span></li>                 
                 </ul>
               </div>
             </div>
