Update personal introduction in index.html

--- a/index.html
+++ b/index.html
@@ -89,15 +89,19 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi, I am a computer vision researcher working in Postdoctoral Position at Gran Sasso Science Institute (GSSI), L'Aquila city, Italy. I obtained a Ph.D. degree in Computer Science from Chonnam National Univesity (South 
-            Korea) in 2022, advised by Prof. Guee-Sang Lee. I achieved Master degree in Electronics
-            Engineering under the supervision of Dr. Nguyen Thanh Dung and Master of Engineering
-            Trinh Hoang Duy at the University of Technology and Education (Vietnam) in
-            2018. Before that, I was a Teacher at Vietnam Aviation Academy.
-            I am mainly interested in the intersection of machine learning and computer vision to build
-            machines that can engage in the physical world contributively. Now I am focusing
-            on a wide range of topics, including document processing, medical prognosis systems, and
-            AI agriculture disease detection.</p>
+          <p>I am currently a postdoctoral researcher in Artificial Intelligence at the Gran Sasso Science Institute (GSSI), L’Aquila, Italy. 
+            I received my Ph.D. in AI from Chonnam National University (South Korea) in 2022, under the supervision of Prof. Guee-Sang Lee. 
+            I obtained my Master’s degree in Electronics Engineering from the University of Technology and Education (Vietnam) in 2018, under the supervision of Dr. Nguyen Thanh Dung and M.Eng. Trinh Hoang Duy. 
+            Prior to pursuing my graduate studies, I served as a lecturer at the Vietnam Aviation Academy.
+            My research interests lie at the intersection of machine learning and computer vision, with the objective of developing intelligent systems capable of meaningful interaction with the physical world. 
+            Current research focuses on anomaly detection in medical data and AI-driven applications in agriculture.</p>
+
+          <p>Buongiorno Tutti! Attualmente ricopro il ruolo di ricercatore post-dottorato in Intelligenza Artificiale presso il Gran Sasso Science Institute (GSSI), a L’Aquila, Italia. 
+            Ho conseguito il dottorato di ricerca (Ph.D.) in AI presso la Chonnam National University (Corea del Sud) nel 2022, sotto la supervisione del Prof. Guee-Sang Lee. 
+            Nel 2018 ho ottenuto la laurea magistrale in Ingegneria Elettronica presso la University of Technology and Education (Vietnam), sotto la supervisione del Dott. Nguyen Thanh Dung e del M.Eng. Trinh Hoang Duy. 
+            In precedenza, ho svolto attività di docenza presso la Vietnam Aviation Academy. 
+            La mia attività di ricerca si colloca nell’ambito del machine learning e della computer vision, con l’obiettivo di sviluppare sistemi intelligenti in grado di interagire in modo efficace con il mondo fisico. 
+            Attualmente mi occupo principalmente di rilevazione di anomalie in ambito medico e di applicazioni dell’intelligenza artificiale nel settore agricolo.</p>
         </div>
 
         <div class="row">
