--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Gran Sasso Science Institute</strong> <span></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>L'Aquila, Italy</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor of Philosophy in Computer Science</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor of Philosophy in AI</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>minhtrieu.tran@gssi.it</span></li>                 
                 </ul>
               </div>
@@ -187,6 +187,45 @@
                     <div class="resume-content">
                         <h3 class="mb-0">Journals</h3>
                         <ol>
+
+                            <li>
+                                <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em> Lightweight-oriented classification using distillation learning and spatial information from tabular data</em>”.
+                                In: Applied Soft Computing
+                                192 (2026), p. 114798. DOI: https://doi.org/10.1016/j.asoc.2026.114798.
+                                <a
+                                    href="https://doi.org/10.1016/j.asoc.2026.114798">Elsevier</a>
+                            </li>
+
+
+                            <li>
+                                <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblastoma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
+                                In: IEEE Access
+                                11 (2023), p. 37437-37449. DOI: 10.1109/ACCESS.2023.3266771.
+                                <a
+                                    href="https://ieeexplore.ieee.org/document/10101792/">IEEE</a>
+                            </li>
+
+
+
+                            <li>
+                                <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblastoma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
+                                In: IEEE Access
+                                11 (2023), p. 37437-37449. DOI: 10.1109/ACCESS.2023.3266771.
+                                <a
+                                    href="https://ieeexplore.ieee.org/document/10101792/">IEEE</a>
+                            </li>
+
+
+                            <li>
+                                <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblastoma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
+                                In: IEEE Access
+                                11 (2023), p. 37437-37449. DOI: 10.1109/ACCESS.2023.3266771.
+                                <a
+                                    href="https://ieeexplore.ieee.org/document/10101792/">IEEE</a>
+                            </li>
+
+                          64545646
+                          
                             <li>
                                 <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblastoma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
                                 In: IEEE Access
