Change citation link from IEEE to Springer

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 In: Multimedia Systems
                                 31, 192 (2025). DOI: 10.1007/s00530-025-01782-w.
                                 <a
-                                    href="https://doi.org/10.1007/s00530-025-01782-w">IEEE</a>
+                                    href="https://doi.org/10.1007/s00530-025-01782-w">Springer</a>
                             </li>
 
 
