Modify citation for a research paper
Updated citation details for a research paper in index.html.

--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
 
 
                             <li>
-                                <b>Tran M-T</b>, Yang H-J, Kim S-H and Lee G-S. <br>“<em>Prediction of Survival of Glioblastoma Patients Using Local Spatial Relationships and Global Structure Awareness in FLAIR MRI Brain Images</em>”.
-                                In: IEEE Access
-                                11 (2023), p. 37437-37449. DOI: 10.1109/ACCESS.2023.3266771.
+                                Kim Dung Nguyen, Yeong Soo Choi, Jang Hoon Lee, </b>Tran M-T</b> , XiangHui Xin. <br>“<em>An effective deep learning model for classifying diseases on strawberry leaves and estimating their severity based on the multi-task U‑Net</em>”.
+                                In: Multimedia Tools and Applications
+                                84, (2024), p. 31329–31350. DOI: 10.1007/s11042-024-20413-6.
                                 <a
-                                    href="https://ieeexplore.ieee.org/document/10101792/">IEEE</a>
+                                    href="doi.org/10.1007/s11042-024-20413-6">Springer</a>
                             </li>
 
                           64545646
