--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                 In: Multimedia Tools and Applications
                                 84, (2024), p. 31329–31350. DOI: 10.1007/s11042-024-20413-6.
                                 <a
-                                    href="doi.org/10.1007/s11042-024-20413-6">Springer</a>
+                                    href="https://doi.org/10.1007/s11042-024-20413-6">Springer</a>
                             </li>
 
                           64545646
