Add testimonial for Patrizio Pelliccione
Added a testimonial section for Patrizio Pelliccione with relevant details.

--- a/index.html
+++ b/index.html
@@ -772,6 +772,15 @@ considering also the collaboration and cooperation with humans. <a href="https:/
                 <div class="owl-carousel testimonials-carousel">
 
                     <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
+                        <img src="assets/img/testimonials/prof-patrizio.png" class="testimonial-img" alt="">
+                        <h3>Patrizio Pelliccione</h3>
+                        <h4><b>Professor</b></h4>
+                        <h4>Department of Computer Science</h4>
+                        <h4>Gran Sasso Science Institute</h4>
+                        <h4><a href=mailto:“patrizio.pelliccione@gssi.it">patrizio.pelliccione@gssi.it</a></h4>
+                    </div>
+
+                    <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                         <img src="assets/img/testimonials/prof-lee.png" class="testimonial-img" alt="">
                         <h3>Guee-Sang Lee</h3>
                         <h4><b>Professor</b></h4>
