Revise project descriptions in index.html
Updated project experience to focus on AI and robotics in agriculture.

--- a/index.html
+++ b/index.html
@@ -595,8 +595,8 @@
                             </h6>
                             <h5>10/2024-present</h5>
                             <ul>
-                                <li>Development of DL model to predict the overall survival days of Glioblastoma Patients;</li>
-                                <li>Development of DL model to detect scene text under occlusion. </li>
+                                <li>Exploration the integration of applied AI and service robotics in agriculture, focusing on tasks like planting, monitoring, and harvesting;</li>
+                                <li>Emphasis is placed on human–robot collaboration, enabling robots to work safely and efficiently alongside farmers while optimizing agricultural productivity. </li>
                             </ul>
                         </div>
                       
